--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
         <div class="col-12 col-md-6 pt-1">
           <h3 class="footer-headings">Contact Us</h3>
           <hr class="footer-divider">
-          <p><i class="fas fa-map-marker-alt hvr-pulse-grow"></i> Head office: Galway, Ireland</p>
+          <p><i class="fas fa-map-marker-alt hvr-pulse-grow"></i> Head office: Shop Street, Galway, Ireland</p>
           <p><i class="fas fa-envelope hvr-pulse-grow"></i> <a id="email-address" href="mailto:info@balance.com?">info@lcpeireland.com </a></p>
           <p><i class="fas fa-envelope hvr-pulse-grow"></i> <a id="email-address" href="mailto:info@balance.com?">sales@lcpeireland.com </a></p>
           <p><i class="fas fa-phone hvr-pulse-grow"></i> <a id="phone-number-ire" href="tel:+353-01-70-80-90"> +353 1 70 80 90</a>: Monday-Friday: 9am-5pm GMT </p>
